Fix alignment of sections and images in Portfolio page, update sizing of elements

--- a/app/styles/about.css
+++ b/app/styles/about.css
@@ -6,7 +6,6 @@
 }
 
 .aboutSection {
-    color: #000;
     margin: 0 auto;
     width: 80%;
 }
