--- a/app/styles/index.css
+++ b/app/styles/index.css
@@ -1,5 +1,6 @@
 article {
     bottom: 0;
+    color: #000;
     left: 0;
     overflow: auto;
     position: absolute;
@@ -20,6 +21,10 @@ main {
     top: 0;
     right: 0;
     bottom: 0;
+}
+
+p {
+    margin: 0;
 }
 
 section {
